test_suite_no_default/tests/ui/compilefail/not_a_struct.rs
use hcaptcha::Hcaptcha;
// use hcaptcha_derive::Hcaptcha;

#[derive(Hcaptcha)]
enum Test {
    #[captcha]
    Hcaptcha(String),
}

fn main() {
    println!("Super!");
}